[tool.poetry]
name = "gyomu-flask"
version = "0.1.0"
description = "Flask API for Gyomu"
authors = ["Yoshihisa Matsumoto <yoshmatsumoto@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "*"
click = "7.1.2"
jsonpickle = "2.0.0"
jsons = "1.4.0"
pycryptodome = "3.10.1"
pyzipper= "^0.3.4"
sqlalchemy = "1.4.00"

[tool.poetry.dev-dependencies]
pytest = "^6.2"